<resources>
    <string name="app_name">MyMall</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">专题</string>
    <string name="title_notifications">分类</string>
    <string name="title_cart">购物车</string>
    <string name="title_own">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="submit_h5">
        <html>

            <head>
                <style>
                    p{
                    marin:'0px'
                    }
                </style>
            </head>

            <body>

            </body>
        </html>
    </string>-->
</resources>