<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mymall.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.mymall.ui.specialsubject.SpecialsubjectFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_specialsubject" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mymall.ui.classification.ClassificationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.mymall.ui.cart.fragment.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_own"
        android:name="com.example.mymall.ui.own.OwnFragment"
        android:label="@string/title_own"
        tools:layout="@layout/fragment_own" />

</navigation>